// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`declare-index-signature.ts format 1`] = `
====================================options=====================================
parsers: ["babel-ts"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// Invalid, but recoverable
class C {
  declare [key: string]: string;
}

=====================================output=====================================
// Invalid, but recoverable
class C {
  declare [key: string]: string;
}

================================================================================
`;

exports[`invalid-modifiers.ts format 1`] = `
====================================options=====================================
parsers: ["babel-ts"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
interface Foo {
  private a();
  public b();
  protected c();
  static d();
  declare e();
  abstract f();
  readonly g();
}

class Bar {
  declare e() {};
  readonly g() {};
}

=====================================output=====================================
interface Foo {
  private a();
  public b();
  protected c();
  static d();
  declare e();
  abstract f();
  readonly g();
}

class Bar {
  declare e() {}
  readonly g() {}
}

================================================================================
`;

exports[`ts-4.3-override-modifier.ts format 1`] = `
====================================options=====================================
parsers: ["babel-ts"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
class MyClass extends BaseClass {
  override show() {}
  public override show() {}
  override size = 5;
  override readonly size = 5;
}

=====================================output=====================================
class MyClass extends BaseClass {
  override show() {}
  public override show() {}
  override size = 5;
  override readonly size = 5;
}

================================================================================
`;

exports[`ts4.3-type-members-get-set.ts format 1`] = `
====================================options=====================================
parsers: ["babel-ts"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
interface Foo {
  get foo(): string;
  set bar(v);
}

type Foo = {
  get foo(): string;
  set bar(v);
}

interface Foo {
  set bar(foo: string);
}

=====================================output=====================================
interface Foo {
  get foo(): string;
  set bar(v);
}

type Foo = {
  get foo(): string;
  set bar(v);
};

interface Foo {
  set bar(foo: string);
}

================================================================================
`;

exports[`tuple-labeled-ts.ts format 1`] = `
====================================options=====================================
parsers: ["babel-ts"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// Invalid label 1
type T = [x.y: A];

// Invalid label 2
type T = [x<y>: A];

=====================================output=====================================
// Invalid label 1
type T = [x.y: A];

// Invalid label 2
type T = [x<y>: A];

================================================================================
`;
